welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: type mismatch;
 found   : String
 required: Int
    colore(tab(mes))
               ^Array2:22: error: value % is not a member of String
      colore(tab((mes+j)%(tab.length)))
                        ^